fix: adjust header margin/padding to close gaps

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -13,7 +13,8 @@ $bg-color: #dedede;
 header {
     position: fixed;
     width: 100%;
-    margin-top: 2em;
+    padding-top: 2em;
+    top: 0;
     background-color: $bg-color;
 }
 
